Fix: Show page numbers in Dflink and Notice pagination on mobile display

--- a/dongguk_film/static/css/output.css
+++ b/dongguk_film/static/css/output.css
@@ -1425,6 +1425,14 @@ select {
   border-bottom-right-radius: 0.375rem;
 }
 
+.rounded-br-md {
+  border-bottom-right-radius: 0.375rem;
+}
+
+.rounded-bl-md {
+  border-bottom-left-radius: 0.375rem;
+}
+
 .border {
   border-width: 1px;
 }
@@ -2097,6 +2105,11 @@ select {
   --tw-ring-color: rgb(241 89 34 / var(--tw-ring-opacity));
   --tw-ring-offset-width: 2px;
   --tw-ring-offset-color: #f3f4f6;
+}
+
+.first-letter\:text-sm::first-letter {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
 }
 
 .placeholder\:text-gray-400::-moz-placeholder {
